finish implementation, add tests and documentation