@@ -21,7 +21,7 @@ public class DrawImageTest {
         List<BufferedImage> bufferedImage = underTest.getImageFor(4, 3, null);
 
         File file = Files.newTemporaryFile();
-        ImageIO.write(bufferedImage.get(0), "PNG", file);
+        ImageIO.write(bufferedImage.getFirst(), "PNG", file);
         //hash is different in the github build task, maybe the fonts
         //assertThat(getFileHash(file)).isEqualTo("56046c85f7c7d42e12219132b1b3347d773cb2cda16e8a744b5e368b3902a056");
         assertThat(file).exists();
@@ -32,7 +32,7 @@ public class DrawImageTest {
         List<BufferedImage> bufferedImage = underTest.getImageFor(4, 3, "green");
 
         File file = Files.newTemporaryFile();
-        ImageIO.write(bufferedImage.get(0), "PNG", file);
+        ImageIO.write(bufferedImage.getFirst(), "PNG", file);
 
         //hash is different in the github build task, maybe the fonts
         //assertThat(getFileHash(file)).isEqualTo("d6bec552add788ea98a61212937c488fa93b73336a459fe2e8d6e91ebaaefcce");
@@ -45,7 +45,7 @@ public class DrawImageTest {
         List<BufferedImage> bufferedImage = underTest.getImageFor(10, 10, "green");
 
         File file = Files.newTemporaryFile();
-        ImageIO.write(bufferedImage.get(0), "PNG", file);
+        ImageIO.write(bufferedImage.getFirst(), "PNG", file);
 
         //hash is different in the github build task, maybe the fonts
         //assertThat(getFileHash(file)).isEqualTo("b43bbfd78951e5d1db4e5513f86d5719caf58495cd76316389347ad674c8de4d");
@@ -59,7 +59,7 @@ public class DrawImageTest {
         assertThat(bufferedImage).hasSize(2);
 
         File file = Files.newTemporaryFile();
-        ImageIO.write(bufferedImage.get(0), "PNG", file);
+        ImageIO.write(bufferedImage.getFirst(), "PNG", file);
 
         //hash is different in the github build task, maybe the fonts
         //assertThat(getFileHash(file)).isEqualTo("4788214962fe8fc6fd82961c6993451f3b747c3ac85856bc2489c9f2390d839a");
