@@ -60,7 +60,8 @@ class ImageResultCreatorTest {
                 //Arguments.of(DiceImageStyle.polyhedral_2d, List.of(4, 6, 8, 10, 12, 20, 100)),
                 Arguments.of(DiceImageStyle.polyhedral_knots, List.of(4, 6, 8, 10, 12, 20, 100)),
                 Arguments.of(DiceImageStyle.fate, List.of(-1, 0, 1)),
-                Arguments.of(DiceImageStyle.d6_dots, List.of(6))
+                Arguments.of(DiceImageStyle.d6_dots, List.of(6)),
+                Arguments.of(DiceImageStyle.expanse, List.of(6))
         );
     }
 
@@ -102,7 +103,7 @@ class ImageResultCreatorTest {
     void createRollCacheNameTest_blackGold() throws ExpressionException {
         List<Roll> rolls = new DiceEvaluator(new GivenNumberSupplier(1, 2, 3, 4, 5, 6, 1, 2, 3, 4, 5, 6), 1000).evaluate("6d6+1d6+3d6");
 
-        String res = underTest.createRollCacheName(rolls.get(0), new DiceStyleAndColor(DiceImageStyle.polyhedral_alies_v1, "black_and_gold"));
+        String res = underTest.createRollCacheName(rolls.getFirst(), new DiceStyleAndColor(DiceImageStyle.polyhedral_alies_v1, "black_and_gold"));
 
         assertThat(res).isEqualTo("polyhedral_alies_v1_black_and_gold@[1∈[1...6],2∈[1...6],3∈[1...6],4∈[1...6],5∈[1...6],6∈[1...6]],[1∈[1...6]],[2∈[1...6],3∈[1...6],4∈[1...6]]");
     }
@@ -111,7 +112,7 @@ class ImageResultCreatorTest {
     void createRollCacheNameTest_multiColor() throws ExpressionException {
         List<Roll> rolls = new DiceEvaluator(new GivenNumberSupplier(4, 6, 8, 10, 12, 20, 99), 1000).evaluate("color(1d4,'gray') + color(1d6,'black') + color(1d8,'white') + color(1d10,'red') + color(1d12,'blue') + color(1d20,'green') + color(1d100,'orange')");
 
-        String res = underTest.createRollCacheName(rolls.get(0), new DiceStyleAndColor(DiceImageStyle.polyhedral_2d, "red"));
+        String res = underTest.createRollCacheName(rolls.getFirst(), new DiceStyleAndColor(DiceImageStyle.polyhedral_2d, "red"));
 
         assertThat(res).isEqualTo("polyhedral_2d_red@[gray:4∈[1...4]],[black:6∈[1...6]],[white:8∈[1...8]],[red:10∈[1...10]],[blue:12∈[1...12]],[green:20∈[1...20]],[orange:99∈[1...100]]");
     }
@@ -120,7 +121,7 @@ class ImageResultCreatorTest {
     void createRollCacheNameTest_multiCol() throws ExpressionException {
         List<Roll> rolls = new DiceEvaluator(new GivenNumberSupplier(4, 6, 8, 10, 12, 20, 99), 1000).evaluate("1d4 col 'gray' + 1d6 col 'black' + 1d8 col 'white' + 1d10 col 'red' + 1d12 col 'blue' + 1d20 col 'green' + 1d100 col 'orange'");
 
-        String res = underTest.createRollCacheName(rolls.get(0), new DiceStyleAndColor(DiceImageStyle.polyhedral_2d, "red"));
+        String res = underTest.createRollCacheName(rolls.getFirst(), new DiceStyleAndColor(DiceImageStyle.polyhedral_2d, "red"));
 
         assertThat(res).isEqualTo("polyhedral_2d_red@[gray:4∈[1...4]],[black:6∈[1...6]],[white:8∈[1...8]],[red:10∈[1...10]],[blue:12∈[1...12]],[green:20∈[1...20]],[orange:99∈[1...100]]");
     }
@@ -129,7 +130,7 @@ class ImageResultCreatorTest {
     void createRollCacheNameTest_fateBlack() throws ExpressionException {
         List<Roll> rolls = new DiceEvaluator(new GivenNumberSupplier(1, 2, 3, 1), 1000).evaluate("4d[-1,0,1]");
 
-        String res = underTest.createRollCacheName(rolls.get(0), new DiceStyleAndColor(DiceImageStyle.fate, "black"));
+        String res = underTest.createRollCacheName(rolls.getFirst(), new DiceStyleAndColor(DiceImageStyle.fate, "black"));
 
         assertThat(res).isEqualTo("fate_black@[-1∈[-1, 0, 1],0∈[-1, 0, 1],1∈[-1, 0, 1],-1∈[-1, 0, 1]]");
     }
@@ -138,7 +139,7 @@ class ImageResultCreatorTest {
     void createRollCacheNameTest_explode() throws ExpressionException {
         List<Roll> rolls = new DiceEvaluator(new GivenNumberSupplier(6, 6, 5, 5, 4, 3), 1000).evaluate("3d!6");
 
-        String res = underTest.createRollCacheName(rolls.get(0), new DiceStyleAndColor(DiceImageStyle.polyhedral_3d, "red_and_white"));
+        String res = underTest.createRollCacheName(rolls.getFirst(), new DiceStyleAndColor(DiceImageStyle.polyhedral_3d, "red_and_white"));
 
         assertThat(res).isEqualTo("polyhedral_3d_red_and_white@[6∈[1...6],6∈[1...6],5∈[1...6],5∈[1...6],4∈[1...6]]");
     }
@@ -147,7 +148,7 @@ class ImageResultCreatorTest {
     void createRollCacheNameTest_explodeAdd() throws ExpressionException {
         List<Roll> rolls = new DiceEvaluator(new GivenNumberSupplier(6, 6, 5, 5, 4, 3), 1000).evaluate("3d!!6");
 
-        String res = underTest.createRollCacheName(rolls.get(0), new DiceStyleAndColor(DiceImageStyle.polyhedral_3d, "red_and_white"));
+        String res = underTest.createRollCacheName(rolls.getFirst(), new DiceStyleAndColor(DiceImageStyle.polyhedral_3d, "red_and_white"));
 
         assertThat(res).isEqualTo("polyhedral_3d_red_and_white@[6∈[1...6],6∈[1...6],5∈[1...6],5∈[1...6],4∈[1...6]]");
     }
@@ -338,7 +339,7 @@ class ImageResultCreatorTest {
     void createRollCacheNameTest_3dRedWhite() throws ExpressionException {
         List<Roll> rolls = new DiceEvaluator(new GivenNumberSupplier(1, 2, 3, 4, 5, 6, 1, 2, 3, 4, 5, 6), 1000).evaluate("6d6+1d6+3d6");
 
-        String res = underTest.createRollCacheName(rolls.get(0), new DiceStyleAndColor(DiceImageStyle.polyhedral_3d, "red_and_white"));
+        String res = underTest.createRollCacheName(rolls.getFirst(), new DiceStyleAndColor(DiceImageStyle.polyhedral_3d, "red_and_white"));
 
         assertThat(res).isEqualTo("polyhedral_3d_red_and_white@[1∈[1...6],2∈[1...6],3∈[1...6],4∈[1...6],5∈[1...6],6∈[1...6]],[1∈[1...6]],[2∈[1...6],3∈[1...6],4∈[1...6]]");
     }
@@ -500,6 +501,16 @@ class ImageResultCreatorTest {
         Supplier<? extends InputStream> res = underTest.getImageForRoll(rolls, new DiceStyleAndColor(DiceImageStyle.polyhedral_RdD, "special"));
 
         assertThat(res).isNull();
+    }
+
+    @Test
+    void getImageForRoll_Expanse() throws ExpressionException, IOException {
+        List<Roll> rolls = new DiceEvaluator(new GivenNumberSupplier(1, 2, 3, 4, 5, 6), 1000).evaluate("6d6");
+
+        Supplier<? extends InputStream> res = underTest.getImageForRoll(rolls, new DiceStyleAndColor(DiceImageStyle.expanse, DiceImageStyle.expanse.getDefaultColor()));
+
+        assertThat(res).isNotNull();
+        assertThat(getDataHash(res)).isEqualTo("fc777c82f5daca2e2ca1cfc1cb996f7ecc4eddacdf76bc0521513c92ff5a75f5");
     }
 
     @Test
